Version 3.0.14 - 2016-02-06
* Bug fixes (see mercurial logs for details)
* Don't read historized user when evaluating record rules as it could lead to
  past privilege escalation.

Version 3.0.13 - 2016-01-11
* Bug fixes (see mercurial logs for details)

Version 3.0.12 - 2015-11-09
* Bug fixes (see mercurial logs for details)

Version 3.0.11 - 2015-05-19
* Bug fixes (see mercurial logs for details)

Version 3.0.10 - 2015-03-30
* Bug fixes (see mercurial logs for details)

Version 3.0.9 - 2015-02-16
* Bug fixes (see mercurial logs for details)

Version 3.0.8 - 2014-11-06
* Bug fixes (see mercurial logs for details)

Version 3.0.7 - 2014-09-29
* Bug fixes (see mercurial logs for details)
* Use literal_eval instead of safe_eval (CVE-2014-6633)
* Prevent double underscore in safe_eval (CVE-2014-6633)

Version 3.0.6 - 2014-08-03
* Bug fixes (see mercurial logs for details)

Version 3.0.5 - 2014-07-01
* Bug fixes (see mercurial logs for details)

Version 3.0.4 - 2014-04-07
* Bug fixes (see mercurial logs for details)

Version 3.0.3 - 2014-03-22
* Bug fixes (see mercurial logs for details)

Version 3.0.2 - 2014-01-18
* Bug fixes (see mercurial logs for details)

Version 3.0.1 - 2013-12-04
* Bug fixes (see mercurial logs for details)

Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)
* Allow customization of translation in po files
* Use python-sql
* Add convert_domain method on Fields
* Add sql_format and sql_type methods on Fields
* Allow to return a full domain for Function.searcher
* Replace static backend by dynamic get method
* Replace order_field by order_<field name> method
* Allow field One2One in check_recursion
* Remove the default order on MPTT
* Add grouped attribute to data tag
* Store selection tree state
* Add order to Action Window
* Add factor on number fields
* Add calendar view
* Remove request

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)
* Allow to search on target of Reference field
* Remove _inherits